workspace/DevP360/src/objects/EHR_Procedure__c.object
<CustomObject>
    <description>This object holds procedural information</description>
    <fields>
        <fullName>Code_Label__c</fullName>
        <description>The human readable description of the procedure.</description>
        <label>Code Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_System__c</fullName>
        <description>The Coding System used for this procedure (e.g., &quot;CPT-4&quot;, &quot;SNOMED-CT&quot;, etc.)</description>
        <label>Code System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>The code used to represent this procedure.</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Performed__c</fullName>
        <description>The approximate date the procedure was performed</description>
        <label>Date Performed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encounter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EHR Encounter</label>
        <referenceTo>HealthCloudGA__EhrEncounter__c</referenceTo>
        <relationshipLabel>EHR Procedures</relationshipLabel>
        <relationshipName>EHR_Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onset_Date__c</fullName>
        <description>Actual or estimated onset date for the Procedure</description>
        <label>Onset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EHR Procedures</relationshipLabel>
        <relationshipName>EHR_Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Procedure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked for Primary Procedure, else unchecked.</description>
        <label>Primary Procedure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_MRN__c</fullName>
        <label>Source System MRN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>The name of the system that was the source of this data (e.g., &quot;MSHS-EPIC&quot;)</description>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EHR Procedure</label>
    <nameField>
        <displayFormat>EP-{0000}</displayFormat>
        <label>EHR Procedure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Procedures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>